add metal4 submodule and third party notice

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "extern/OpenRAND"]
 	path = extern/OpenRAND
 	url = https://github.com/glotzerlab/OpenRAND.git
+[submodule "extern/metal-cpp-cmake"]
+	path = extern/metal-cpp-cmake
+	url = https://github.com/pinyili2/metal-cpp-cmake.git
