add policy, change Buffer behaviour

--- a/src/Tests/CMakeLists.txt
+++ b/src/Tests/CMakeLists.txt
@@ -28,17 +28,63 @@ if(USE_METAL AND APPLE)
         ${FOUNDATION_FRAMEWORK}
         ${QUARTZCORE_FRAMEWORK}
     )
+    # Horrible METAL library loding system, just use the default.metallib
+    # Compile Metal shaders
+    # set(METAL_SHADER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Backends)
+    # set(METAL_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
+    # 
+    # # Find all .metal files
+    # file(GLOB METAL_SOURCES ${METAL_SHADER_DIR}/*.metal)
+    # 
+    # # Create a list to hold the compiled .air files
+    # set(METAL_AIR_FILES)
+    # 
+    # # Compile each .metal file to .air
+    # foreach(METAL_SOURCE ${METAL_SOURCES})
+    #     get_filename_component(METAL_NAME ${METAL_SOURCE} NAME_WE)
+    #     set(AIR_FILE ${METAL_OUTPUT_DIR}/${METAL_NAME}.air)
+    #     
+    #     add_custom_command(
+    #         OUTPUT ${AIR_FILE}
+    #         COMMAND xcrun -sdk macosx metal -c ${METAL_SOURCE} -o ${AIR_FILE}
+    #         DEPENDS ${METAL_SOURCE}
+    #         COMMENT "Compiling Metal shader: ${METAL_NAME}.metal"
+    #         VERBATIM
+    #     )
+    #     
+    #     list(APPEND METAL_AIR_FILES ${AIR_FILE})
+    # endforeach()
+    # 
+    # # Create the Metal library
+    # set(METAL_LIBRARY ${METAL_OUTPUT_DIR}/default.metallib)
+    # add_custom_command(
+    #     OUTPUT ${METAL_LIBRARY}
+    #     COMMAND xcrun -sdk macosx metallib ${METAL_AIR_FILES} -o ${METAL_LIBRARY}
+    #     DEPENDS ${METAL_AIR_FILES}
+    #     COMMENT "Creating Metal library: default.metallib"
+    #     VERBATIM
+    # )
+    # 
+    # # Create a custom target for Metal shaders
+    # add_custom_target(metal_shaders ALL DEPENDS ${METAL_LIBRARY})
+    # 
+    # # Copy the Metal library to the test working directory
+    # add_custom_command(
+    #     TARGET metal_shaders POST_BUILD
+    #     COMMAND ${CMAKE_COMMAND} -E copy ${METAL_LIBRARY} ${CMAKE_BINARY_DIR}/src/Tests/
+    #     COMMENT "Copying Metal library to test directory"
+    #     VERBATIM
+    # )
 
     # Metal backend tests
     add_executable(arbd_test_metal
-        Backends/metal_backend.cpp
-        Backends/metal_test.cpp
-        Kernels/metal_unifiedbuffer.cpp 
-        Kernels/metal_events.cpp
-        #All of the above work
+        Backends/metal_manager.cpp
         ${CMAKE_SOURCE_DIR}/extern/Catch2/extras/catch_amalgamated.cpp)
     target_include_directories(arbd_test_metal PRIVATE ${METAL_TEST_INCLUDES})
     target_link_libraries(arbd_test_metal PRIVATE ${METAL_TEST_LIBS})
+    
+    # # Make sure Metal shaders are built before the test executable
+    # add_dependencies(arbd_test_metal metal_shaders)
 
     add_test(NAME Metal_Tests COMMAND arbd_test_metal)
     set_tests_properties(Metal_Tests PROPERTIES
@@ -48,7 +94,7 @@ if(USE_METAL AND APPLE)
     install(TARGETS arbd_test_metal)
     # Metal math tests
     add_executable(arbd_test_metal_math
-        Math/metal_bitmask.cpp
+        #Math/metal_bitmask.cpp
         #All of the above works
         ${CMAKE_SOURCE_DIR}/extern/Catch2/extras/catch_amalgamated.cpp)
     target_include_directories(arbd_test_metal_math PRIVATE ${METAL_TEST_INCLUDES})
@@ -69,6 +115,7 @@ endif()
 if(USE_SYCL_ACPP OR USE_SYCL_ICPX)
     # Test for test_sycl.cpp - now uses Catch2's main function
     add_executable(arbd_test_sycl
+        #Kernels/sycl_kernels.cpp
         ${CMAKE_SOURCE_DIR}/extern/Catch2/extras/catch_amalgamated.cpp)
     target_include_directories(arbd_test_sycl PRIVATE ${CMAKE_SOURCE_DIR}/src)
     target_link_libraries(arbd_test_sycl PRIVATE "lib${PROJECT_NAME}")
@@ -81,8 +128,8 @@ if(USE_SYCL_ACPP OR USE_SYCL_ICPX)
     target_link_libraries(arbd_test_sycl_backend PRIVATE "lib${PROJECT_NAME}")
 
     add_executable(arbd_test_sycl_math
-        Math/sycl_bitmask.cpp
-        Math/sycl_random.cpp
+        #Math/sycl_bitmask.cpp
+        #Math/sycl_random.cpp
         ${CMAKE_SOURCE_DIR}/extern/Catch2/extras/catch_amalgamated.cpp)
     target_include_directories(arbd_test_sycl_math PRIVATE ${CMAKE_SOURCE_DIR}/src)
     target_link_libraries(arbd_test_sycl_math PRIVATE "lib${PROJECT_NAME}")
@@ -132,8 +179,8 @@ endif()
 # CUDA Tests
 if(USE_CUDA)
     add_executable(arbd_test_cuda
-        Math/vector3_precision.cu
-        Math/bitmask.cu
+        #Math/vector3_precision.cu
+        #Math/bitmask.cu
         #Math/array.cu
         ${CMAKE_SOURCE_DIR}/extern/Catch2/extras/catch_amalgamated.cpp)
     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --extended-lambda --allow-unsupported-compiler")
